fastapitest/archive/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    # optional allow max file upload size 100M
    # nginx.ingress.kubernetes.io/client-body-buffer-size: 100M
    # nginx.ingress.kubernetes.io/proxy-body-size: 100M
spec:
  rules:
    - host: dev.noctsol.test
      http:
        paths:
          - backend:
              service:
                name: dev-fastapitest-service
                port:
                  number: 80
            path: /
            pathType: "Prefix"
  tls:
    - hosts:
        - dev.noctsol.test
      secretName: noctsol-cert-tls
